--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Build Project
       run: |
         go build
-        tar -cvf sendall-${{ $GITHUB_SHA }}.tar.gz sendall README.md API.md 
+        tar -cvf sendall-${{ github.sha }}.tar.gz sendall README.md API.md 
     - name: Create Release
       uses: actions/create-release@v1
       env:
@@ -30,6 +30,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./sendall-${{ $GITHUB_SHA }}.tar.gz
-          asset_name: my-artifact.zip
+          asset_path: ./sendall-${{ github.sha }}.tar.gz
+          asset_name: sendall-${{ github.sha }}.tar.gz 
           asset_content_type: application/gzip
