--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -1,6 +1,5 @@
 name: auto-release
-#OHOHOH I AM A USELESS COMMIT
-#SECOND TEST
+
 # Create a new release at every push on master
 on:
   push:
@@ -15,14 +14,18 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
-      - name: Linux Build
+      - name: Linux Build (386)
         run: |
-         GOOS=linux GOARCH=386 go build -o "sendall"
-         tar -cvf sendall-linux.tar.gz sendall README.md API.md 
+         GOOS=linux GOARCH=386 go build -o "sendall-i386"
+         tar -cvf sendall-linux-i386.tar.gz sendall-i386 README.md
+      - name: Linux Build (amd64)
+        run: |
+         GOOS=linux GOARCH=amd64 go build -o "sendall-amd64"
+         tar -cvf sendall-linux-amd64.tar.gz sendall-amd64 README.md
       - name: Windows Build
         run: |
-         GOOS=windows GOARCH=386 go build -o "sendall.exe"
-         zip sendall-windows.zip sendall.exe README.md API.md
+         GOOS=windows GOARCH=amd64 go build -o "sendall.exe"
+         zip sendall-windows-amd64.zip sendall.exe README.md
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -31,14 +34,23 @@ jobs:
         with:
          tag_name: ${{ github.run_id }}
          release_name: Release ${{ github.sha }}
-      - name: Upload Linux Release
+      - name: Upload Linux Release (amd64)
         uses: actions/upload-release-asset@v1
         env:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./sendall-linux.tar.gz
-          asset_name: sendall-linux.tar.gz 
+          asset_path: ./sendall-linux-amd64.tar.gz
+          asset_name: sendall-linux-amd64.tar.gz
+          asset_content_type: application/gzip
+      - name: Upload Linux Release (i386)
+        uses: actions/upload-release-asset@v1
+        env:
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./sendall-linux-i386.tar.gz
+          asset_name: sendall-linux-i386.tar.gz
           asset_content_type: application/gzip
       - name: Upload Windows Release
         uses: actions/upload-release-asset@v1
@@ -46,6 +58,6 @@ jobs:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./sendall-windows.zip
-          asset_name: sendall-windows.zip 
+          asset_path: ./sendall-windows-amd64.zip
+          asset_name: sendall-windows-amd64.zip
           asset_content_type: application/zip
